--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.poetry]
 name = "readmeai"
-version = "0.1.1"
+version = "0.1.5"
 description = "🚀 Generate awesome README.md files from the terminal, powered by OpenAI's GPT language model APIs 💫"
 authors = ["Eli <0x.eli.64s@gmail.com>"]
 license = "MIT"
@@ -43,7 +43,7 @@ pre-commit = "*"
 ruff = "*"
 
 [tool.poetry.dependencies]
-python = "^3.8.1"
+python = ">3.9.7,<4.0.0"
 colorlog = "^6.7.0"
 cachetools = "^5.3.1"
 gitpython = "^3.1.31"
@@ -58,6 +58,7 @@ tiktoken = "^0.4.0"
 toml = "^0.10.2"
 pydantic = "^1.10.9"
 click = "^8.1.6"
+streamlit = "^1.25.0"
 
 [tool.poetry.scripts]
 readmeai = "readmeai.main:cli"
