--- a/.github/workflows/build_package.yaml
+++ b/.github/workflows/build_package.yaml
@@ -25,8 +25,7 @@ jobs:
     - name: Build package
       run: python -m build
     - name: Publish package
-      run: |
-        python -m twine upload --skip-existing dist/*
+      run: python -m twine upload --skip-existing dist/*
       env:
         TWINE_USERNAME: __token__
         TWINE_PASSWORD: ${{ secrets.PYPI_API_TOKEN }}
