--- a/.gitignore
+++ b/.gitignore
@@ -44,7 +44,5 @@ notebooks/
 .benchmarks/
 
 # Work In Progress
-conf/templates
-src/redis_cache.py
-conf/prompts.toml
-readmeai/app.py
+readmeai/conf/templates
+readmeai/conf/prompts.toml
