‣ Update readmeai package metadata and bump to v0.3.22

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.poetry]
 name = "readmeai"
-version = "0.3.021"
+version = "0.3.022"
 description = "🚀 Generate awesome README.md files from the terminal, powered by OpenAI's GPT language model APIs 💫"
 authors = ["Eli <0x.eli.64s@gmail.com>"]
 license = "MIT"
@@ -12,11 +12,12 @@ readme = "README.md"
 homepage = "https://github.com/eli64s/readme-ai"
 documentation = "https://github.com/eli64s/readme-ai/blob/main/README.md"
 keywords = [
-  "markdown",
   "readme",
   "readme-template",
-  "shieldsio",
+  "badge-generator",
+  "auto-documentation",
   "readme-md",
+  "automated-documentation",
   "awesome-readme",
   "readme-generator",
   "gpt-3",
@@ -24,11 +25,10 @@ keywords = [
   "automated-readme",
   "auto-readme",
   "gpt-4",
+  "large-language-models",
   "llms",
-  "awesome-chatgpt",
   "openai-python",
   "chatgpt-python",
-  "openai-chatbot",
   "gpt-35-turbo",
   "gpt-4-api",
   "llm-agent"
