--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,8 +4,8 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.poetry]
 name = "readmeai"
-version = "0.3.033"
-description = "🚀 Generate beautiful README files from the terminal. Powered by OpenAI's GPT LLMs 💫"
+version = "0.3.034"
+description = "🚀 Generate beautiful README.md files. Powered by OpenAI's GPT language model APIs 💫"
 authors = ["Eli <0x.eli.64s@gmail.com>"]
 license = "MIT"
 readme = "README.md"
