--- a/readmeai/conf/ignore_files.toml
+++ b/readmeai/conf/ignore_files.toml
@@ -17,7 +17,6 @@ directories = [
     "docs",
     "htmlcov",
     "imgs",
-    "lock",
     "media",
     "static",
     "tests",
@@ -28,7 +27,7 @@ directories = [
 ]
 extensions = [
     ".iml",
-    ".lock",
+    #".lock",
     ".cache",
     ".cfg",
     ".cert",
@@ -67,12 +66,12 @@ extensions = [
     ".sublime-*",
     ".sum",
     ".swp",
-    ".toml",
+    #".toml",
     ".tsv",
-    ".txt",
+    #".txt",
     ".xml",
-    ".yaml",
-    ".yml",
+    #".yaml",
+    #".yml",
     ".zip",
     ".xlsx",
     ".xls",
@@ -105,7 +104,6 @@ extensions = [
 files = [
     "AUTHORS",
     "CHANGELOG",
-    "toml",
     "init.py",
     "__init__.py",
     ".babelrc",
