🔧 Repository file clean up.

--- a/readmeai/conf/ignore_files.toml
+++ b/readmeai/conf/ignore_files.toml
@@ -143,5 +143,5 @@ files = [
     ".gitignore",
     ".whitesource",
     ".prettierrc",
-    ".pre-commit-config",
+    ".pre-commit-config.yaml",
 ]
