⇢ Update images and examples in README file.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,8 +4,8 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.poetry]
 name = "readmeai"
-version = "0.3.061"
-description = "🚀 Automated README generation from the terminal, powered by GPT 🪐"
+version = "0.3.062"
+description = "🚀 Generate beautiful README files automatically, powered by GPT-4 🪐"
 authors = ["Eli <0x.eli.64s@gmail.com>"]
 license = "MIT"
 readme = "README.md"
