⇢ Repository file clean up.

--- a/.gitignore
+++ b/.gitignore
@@ -44,9 +44,10 @@ notebooks/
 # Ignore benchmarks
 .benchmarks/
 
+# Directories
+docs/
+
 # Work In Progress
 readmeai/conf/templates
 readmeai/conf/prompts.toml
-.github/workflows/update_readme.yaml
 readmeai/conf/badges_v0.json
-docs/
