--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.poetry]
 name = "readmeai"
-version = "0.3.065"
+version = "0.3.067"
 description = "🚀 Generate beautiful README files automatically, powered by GPT-4 🪐"
 authors = ["Eli <0x.eli.64s@gmail.com>"]
 license = "MIT"
@@ -58,30 +58,14 @@ isort = "*"
 pytest = "*"
 pytest-cov = "*"
 pre-commit = "*"
-ruff = "*"
 
-[tool.ruff]
-line-length = 88
-target-version = "py39"
-extend-select = [
-  "I", # isort
-  "N", # pep8-naming
-  "UP", # pyupgrade
-  "RUF", # ruff
-  "B", # flake8-bugbear
-  "C4", # flake8-comprehensions
-  "PTH", # flake8-use-pathlib
-  "SIM", # flake8-simplify
-  "TID", # flake8-tidy-imports
-
-]
-
-[tool.ruff.isort]
-force-sort-within-sections = true
-split-on-trailing-comma = false
-
-[tool.ruff.flake8-tidy-imports]
-ban-relative-imports = "all"
+[tool.isort]
+line_length = 88
+known_third_party = ["tenacity"]
+multi_line_output = 3
+include_trailing_comma = true
+force_grid_wrap = 0
+use_parentheses = true
 
 [tool.pytest.ini_options]
 testpaths = ["tests"]
