--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.poetry]
 name = "readmeai"
-version = "0.3.067"
+version = "0.3.068"
 description = "🚀 Generate beautiful README files automatically, powered by GPT-4 🪐"
 authors = ["Eli <0x.eli.64s@gmail.com>"]
 license = "MIT"
@@ -26,6 +26,7 @@ keywords = [
     'openai-api',
     'python',
     'readme',
+    'readme-badges',
     'readme-generation',
     'readme-generator'
 ]
@@ -50,6 +51,7 @@ tiktoken = "^0.4.0"
 toml = "^0.10.2"
 pydantic = "^1.10.9"
 click = "^8.1.6"
+tornado = "^6.3.3"
 
 [tool.poetry.dev-dependencies]
 black = "*"
