enhancement: Remove redundant git clone operations while.

--- a/.github/release-drafter.yml
+++ b/.github/release-drafter.yml
@@ -11,6 +11,7 @@ template: |
 categories:
   - title: 🚀 Features
     labels:
+      - feat
       - feature
       - enhancement
   - title: 🐛 Bug Fixes
@@ -28,6 +29,7 @@ categories:
       - removed
   - title: 🔐 Security
     labels:
+      - vulnerability
       - security
   - title: 📄 Documentation
     labels:
