--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.poetry]
 name = "readmeai"
-version = "0.3.083"
+version = "0.3.084"
 description = "🚀 Generate beautiful README.md files from the terminal. Powered by OpenAI's GPT LLMs 💫"
 authors = ["Eli <0x.eli.64s@gmail.com>"]
 license = "MIT"
@@ -12,26 +12,26 @@ readme = "README.md"
 homepage = "https://github.com/eli64s/readme-ai"
 documentation = "https://github.com/eli64s/readme-ai/blob/main/README.md"
 keywords = [
-    'python',
-    'markdown',
-    'readme',
-    'documentation',
-    'ai',
-    'readme-badges',
-    'openai',
-    'readme-template',
-    'shieldsio',
-    'readme-md',
-    'awesome-readme',
-    'readme-generator',
-    'readme-generation',
-    'gpt-3',
-    'openai-api',
-    'automated-readme',
-    'auto-readme',
-    'readme-md-generator',
-    'gpt-4',
-    'llm-agent'
+    "python",
+    "cli",
+    "readme",
+    "ai",
+    "readme-badges",
+    "openai",
+    "language-model",
+    "hacktoberfest",
+    "readme-md",
+    "readme-generator",
+    "readme-generation",
+    "gpt-3",
+    "openai-api",
+    "automated-readme",
+    "gpt-4",
+    "chatgpt",
+    "openaiapi",
+    "gpt-35-turbo",
+    "llm-agent",
+    "openai-api-python"
 ]
 include = ["readmeai", "readmeai.*"]
 
@@ -55,6 +55,8 @@ toml = "^0.10.2"
 pydantic = "^1.10.9"
 click = "^8.1.6"
 tornado = "^6.3.3"
+asyncio = "^3.4.3"
+aiohttp = "^3.8.5"
 
 [tool.poetry.dev-dependencies]
 black = "*"
@@ -65,6 +67,7 @@ pytest-cov = "*"
 pre-commit = "*"
 
 [tool.isort]
+profile = "black"
 line_length = 88
 known_third_party = ["tenacity"]
 multi_line_output = 3
