Update auto-formater settings and run.

--- a/.github/release-drafter.yml
+++ b/.github/release-drafter.yml
@@ -15,6 +15,7 @@ categories:
       - bug
   - title: 🛠 Maintenance
     labels:
+      - chore
       - maintenance
   - title: ⛔️ Deprecated
     labels:
