--- a/.github/release-drafter.yml
+++ b/.github/release-drafter.yml
@@ -13,7 +13,7 @@ categories:
     labels:
       - fix
       - bug
-  - title: 🛠 Maintenance
+  - title: 🧹 Chore
     labels:
       - chore
       - maintenance
