--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.poetry]
 name = "readmeai"
-version = "0.3.098"
+version = "0.3.099"
 description = "🚀 Generate beautiful README.md files from the terminal. Powered by OpenAI's GPT LLMs 💫"
 authors = ["Eli <0x.eli.64s@gmail.com>"]
 license = "MIT"
@@ -12,23 +12,23 @@ readme = "README.md"
 homepage = "https://github.com/eli64s/readme-ai"
 documentation = "https://github.com/eli64s/readme-ai/blob/main/README.md"
 keywords = [
-    "python",
     "cli",
     "readme",
-    "ai",
+    "devtools",
     "readme-badges",
     "openai",
-    "language-model",
     "hacktoberfest",
     "readme-md",
     "readme-generator",
     "readme-generation",
+    "coding-assistant",
     "gpt-3",
     "openai-api",
     "automated-readme",
     "gpt-4",
     "chatgpt",
     "openaiapi",
+    "llmops",
     "gpt-35-turbo",
     "llm-agent",
     "openai-api-python"
@@ -36,7 +36,7 @@ keywords = [
 include = ["readmeai", "readmeai.*"]
 
 [tool.poetry.scripts]
-readmeai = "readmeai.cli:cli"
+readmeai = "readmeai.cli.main:cli"
 
 [tool.poetry.dependencies]
 python = "^3.8.1"
